--- a/Views/AudioInterfaceView.xaml
+++ b/Views/AudioInterfaceView.xaml
@@ -3,10 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TAC_COM.Views"
+             xmlns:local="clr-namespace:TAC_COM.Views" 
+             xmlns:viewmodels="clr-namespace:TAC_COM.ViewModels" 
+             d:DataContext="{d:DesignInstance Type=viewmodels:AudioInterfaceViewModel}"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+             d:DesignHeight="450" 
+             d:DesignWidth="800">
+    <Grid Background="White">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
             <ColumnDefinition Width="auto"/>
@@ -25,21 +28,22 @@
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Column="2" Grid.Row="1"
-                   Text="TAC/COM" FontFamily="Calibri" FontWeight="Bold" FontSize="24"  
-                   Foreground="#FFA90000"/>
+            Text="TAC/COM" FontFamily="Calibri" FontWeight="Bold" FontSize="24"  
+            Foreground="#FFA90000"/>
         <TextBlock Grid.Column="2" Grid.Row="2" 
-                   Text="COMMUNICATIONS::INTERFACE" FontFamily="Calibri" FontSize="12" 
-                   Foreground="#FFA90000"/>
+            Text="COMMUNICATIONS::INTERFACE" FontFamily="Calibri" FontSize="12" 
+            Foreground="#FFA90000"/>
         <Menu Grid.Column="2" Grid.Row="4" Background="White">
             <Label HorizontalAlignment="Left" Width="90">
                 <TextBlock TextWrapping="WrapWithOverflow" 
-                           Foreground="#FFA90000">
-                    INPUT DEVICE
+                    Foreground="#FFA90000">
+             INPUT DEVICE
                 </TextBlock>
             </Label>
-            <ComboBox x:Name="MicSelection" Width="184" 
-                      ItemsSource="{Binding YourList}" 
-                      SelectedItem="{Binding YourProperty}"/>
+            <ComboBox x:Name="MicSelection" Width="184"
+                      ItemsSource="{Binding AllInputDevices}"
+                      SelectedItem="{Binding SelectedInputDevice}">
+            </ComboBox>
         </Menu>
     </Grid>
 </UserControl>
