--- a/Views/AudioInterfaceView.xaml
+++ b/Views/AudioInterfaceView.xaml
@@ -8,7 +8,8 @@
              d:DataContext="{d:DesignInstance Type=viewmodels:AudioInterfaceViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" 
-             d:DesignWidth="800">
+             d:DesignWidth="800"
+             FontSize="12">
     <Grid Background="White">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
@@ -112,9 +113,7 @@
                              Orientation="Vertical" Height="Auto" Width="5"  Margin="10, 0, 0, 0"
                              Foreground="#FFBD0000" Background="#FFE6E6E6"/>
             </StackPanel>
-            
 
-      
         </StackPanel>
 
     </Grid>
