Hide app window icon

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,9 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TAC_COM"
         xmlns:views="clr-namespace:TAC_COM.Views" 
-        xmlns:viewmodels="clr-namespace:TAC_COM.ViewModels"
+        xmlns:viewmodels="clr-namespace:TAC_COM.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
         mc:Ignorable="d" FontSize="18"
-        Title="TAC/COM" Height="450" Width="800">
+        Height="450" Width="800">
+    <Window.Icon>
+        <DrawingImage/>
+    </Window.Icon>
     <Grid>
         <views:AudioInterfaceView DataContext="{Binding CurrentViewModel}"/>
     </Grid>
