--- a/Views/AudioInterfaceView.xaml
+++ b/Views/AudioInterfaceView.xaml
@@ -49,6 +49,11 @@
                         </LinearGradientBrush>
                     </ComboBox.Background>
                 </ComboBox>
+
+                <ProgressBar Grid.Column="2" Grid.Row="4" Orientation="Vertical" Height="20" Width="4" Margin="10, 0, 0, 0"
+                             VerticalAlignment="Center" HorizontalAlignment="Center"
+                             Foreground="#FFBD0000" Background="#FFE6E6E6"
+                             Value="{Binding AudioManager.InputPeakMeter}"/>
             </StackPanel>
 
             <StackPanel Width="400" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
@@ -71,6 +76,11 @@
                         </LinearGradientBrush>
                     </ComboBox.Background>
                 </ComboBox>
+
+                <ProgressBar Grid.Column="2" Grid.Row="4" Orientation="Vertical" Height="20" Width="4" Margin="10, 0, 0, 0"
+                             VerticalAlignment="Center" HorizontalAlignment="Center"
+                             Foreground="#FFBD0000" Background="#FFE6E6E6"
+                             Value="{Binding AudioManager.OutputPeakMeter}"/>
             </StackPanel>
 
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal">
@@ -133,34 +143,44 @@
                 
 
             </StackPanel>
-            <Label Content="OUTPUT LEVEL" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <Menu HorizontalAlignment="Center" Background="Transparent" VerticalAlignment="Center">
-                <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-                    <Label Grid.Column="2" Grid.Row="4"  Content="INPUT" FontSize="12" Width="60"
-                           HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Top"/>
-                    <ProgressBar Grid.Column="2" Grid.Row="4" Orientation="Vertical"
-                                 Height="50" Width="8" VerticalAlignment="Top" HorizontalAlignment="Center"
-                                 Foreground="#FFBD0000" Background="#FFE6E6E6"
-                                 Value="{Binding AudioManager.InputPeakMeter}"/>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0, 10, 0, 0">
+
+                <StackPanel Orientation="Vertical" Width="200">
+                    <Label Content="NOISE GATE THRESHOLD" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Height="80"
+                          Background="Transparent">
+                        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                            <Slider Grid.Column="2" HorizontalAlignment="Center" Grid.Row="4"
+                                    VerticalAlignment="Center" Width="120" Minimum="-60"
+                                    Value="{Binding AudioManager.NoiseGateThreshold}" Maximum="-20" TickPlacement="TopLeft" TickFrequency="2"/>
+                        </StackPanel>
+                    </StackPanel>
                 </StackPanel>
 
-                <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Top">
-                    <Slider Grid.Column="2" HorizontalAlignment="Center" Grid.Row="4"  Margin="0, 14, 0, 0"
-                            VerticalAlignment="Center" Width="120" Maximum="10" Minimum="-10"
-                            Value="{Binding AudioManager.OutputGainLevel}"/>
-                </StackPanel>
-                
-                <StackPanel Orientation="Vertical">
-                    <Label Grid.Column="2" Grid.Row="4"  Content="OUTPUT" FontSize="12" Width="60"
-                           HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Top"/>
-                    <ProgressBar Grid.Column="2" Grid.Row="4" Orientation="Vertical"
-                                 Height="50" Width="8" VerticalAlignment="Top" HorizontalAlignment="Center"
-                                 Foreground="#FFBD0000" Background="#FFE6E6E6"
-                                 Value="{Binding AudioManager.OutputPeakMeter}"/>
+                <StackPanel Orientation="Vertical" Width="200">
+                    <Label Content="OUTPUT LEVEL" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Height="80"
+                                Background="Transparent">
+                        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                            <Slider Grid.Column="2" HorizontalAlignment="Center" Grid.Row="4"
+                                    VerticalAlignment="Center" Width="120" Maximum="10" Minimum="-10"
+                                    Value="{Binding AudioManager.OutputGainLevel}" TickPlacement="TopLeft"/>
+                        </StackPanel>
+                    </StackPanel>
                 </StackPanel>
 
-            </Menu>
-
+                <StackPanel Orientation="Vertical" Width="200">
+                    <Label Content="THIRD SLIDER" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Height="80"
+                                Background="Transparent">
+                        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                            <Slider Grid.Column="2" HorizontalAlignment="Center" Grid.Row="4"
+                                    VerticalAlignment="Center" Width="120" Maximum="10" Minimum="-10"/>
+                        </StackPanel>
+                    </StackPanel>
+                </StackPanel>
+            </StackPanel>
         </StackPanel>
         
     </Grid>
