--- a/Views/AudioInterfaceView.xaml
+++ b/Views/AudioInterfaceView.xaml
@@ -146,19 +146,19 @@
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0, 10, 0, 0">
 
-                <StackPanel Orientation="Vertical" Width="200">
+                <StackPanel Orientation="Vertical" Width="240">
                     <Label Content="NOISE GATE THRESHOLD" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Height="80"
                           Background="Transparent">
                         <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
                             <Slider Grid.Column="2" HorizontalAlignment="Center" Grid.Row="4"
                                     VerticalAlignment="Center" Width="120" Minimum="-60"
-                                    Value="{Binding AudioManager.NoiseGateThreshold}" Maximum="-20" TickPlacement="TopLeft" TickFrequency="2"/>
+                                    Value="{Binding AudioManager.NoiseGateThreshold}" Maximum="-30" TickPlacement="TopLeft" TickFrequency="2"/>
                         </StackPanel>
                     </StackPanel>
                 </StackPanel>
 
-                <StackPanel Orientation="Vertical" Width="200">
+                <StackPanel Orientation="Vertical" Width="240">
                     <Label Content="OUTPUT LEVEL" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Height="80"
                                 Background="Transparent">
@@ -170,8 +170,8 @@
                     </StackPanel>
                 </StackPanel>
 
-                <StackPanel Orientation="Vertical" Width="200">
-                    <Label Content="THIRD SLIDER" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                <StackPanel Orientation="Vertical" Width="240">
+                    <Label Content="INTERFERENCE" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Height="80"
                                 Background="Transparent">
                         <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
