--- a/Views/AudioInterfaceView.xaml
+++ b/Views/AudioInterfaceView.xaml
@@ -146,12 +146,13 @@
 
                 <StackPanel Orientation="Vertical" Width="240">
                     <Label Content="NOISE GATE THRESHOLD" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <Label Content="{Binding AudioManager.NoiseGateThresholdString}" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Height="40"
                           Background="Transparent">
                         <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
                             <Slider Grid.Column="2" HorizontalAlignment="Center" Grid.Row="4"
                                     VerticalAlignment="Center" Width="120" Minimum="-60"
-                                    Value="{Binding AudioManager.NoiseGateThreshold}" Maximum="-30" TickPlacement="TopLeft" TickFrequency="2"/>
+                                    Value="{Binding AudioManager.NoiseGateThreshold}" Maximum="-30" TickPlacement="TopLeft" TickFrequency="1" IsSnapToTickEnabled="True"/>
                         </StackPanel>
                     </StackPanel>
                 </StackPanel>
