--- a/Views/AudioInterfaceView.xaml
+++ b/Views/AudioInterfaceView.xaml
@@ -172,7 +172,7 @@
 
                 <StackPanel Orientation="Vertical" Width="240">
                     <Label Content="INTERFERENCE" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    <Label Content="{Binding AudioManager.NoiseLevel}" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <Label Content="{Binding AudioManager.NoiseLevelString}" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Height="40"
                                 Background="Transparent">
                         <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
