--- a/Views/AudioInterfaceView.xaml
+++ b/Views/AudioInterfaceView.xaml
@@ -36,9 +36,9 @@
                     </TextBlock>
                 </Label>
 
-                <ComboBox x:Name="MicSelection" Width="250" 
+                <ComboBox x:Name="InputSelection" Width="250" 
                           ItemsSource="{Binding AllInputDevices}"
-                          SelectedIndex="{Binding SelectedInputIndex}" 
+                          SelectedItem="{Binding SelectedInputItem}"
                           Text="SELECT INPUT DEVICE" FontFamily="Calibri" FontSize="14"
                           IsReadOnly="True" IsEditable="True" 
                           VerticalAlignment="Center" HorizontalAlignment="Center">
@@ -65,7 +65,7 @@
 
                 <ComboBox x:Name="OutputSelection" Width="250"
                           ItemsSource="{Binding AllOutputDevices}"
-                          SelectedIndex="{Binding SelectedOutputIndex}" 
+                          SelectedItem="{Binding SelectedOutputItem}" 
                           Text="SELECT VIRTUAL OUTPUT DEVICE" FontFamily="Calibri" FontSize="14"
                           IsReadOnly="True" IsEditable="True" 
                           VerticalAlignment="Center" HorizontalAlignment="Center">
@@ -145,7 +145,7 @@
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0, 10, 0, 0">
 
                 <StackPanel Orientation="Vertical" Width="240">
-                    <Label Content="NOISE GATE THRESHOLD" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <Label x:Name="GateThreshold" Content="NOISE GATE THRESHOLD" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     <Label Content="{Binding AudioManager.NoiseGateThresholdString}" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Height="40"
                           Background="Transparent">
@@ -163,7 +163,7 @@
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Height="40"
                                 Background="Transparent">
                         <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-                            <Slider Grid.Column="2" HorizontalAlignment="Center" Grid.Row="4"
+                            <Slider x:Name="OutputLevel" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="4"
                                     VerticalAlignment="Center" Width="120" Maximum="10" Minimum="-10"
                                     Value="{Binding AudioManager.OutputGainLevel}" TickPlacement="TopLeft" SmallChange="1" IsSnapToTickEnabled="True"/>
                         </StackPanel>
@@ -176,7 +176,7 @@
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Height="40"
                                 Background="Transparent">
                         <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-                            <Slider Grid.Column="2" HorizontalAlignment="Center" Grid.Row="4"
+                            <Slider x:Name="NoiseLevel" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="4"
                                     VerticalAlignment="Center" Width="120" TickPlacement="TopLeft" IsSnapToTickEnabled="True"
                                     Value="{Binding AudioManager.NoiseLevel}" TickFrequency="0.1" Maximum="1"/>
                         </StackPanel>
